--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "chromadb>=0.5.0",
     "sentence-transformers>=2.3.1",
+    "google-generativeai>=0.8.6",
+    "elevenlabs>=2.29.0",
 ]
 
 [build-system]
