--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,7 @@ numpy==2.3.5
 tqdm==4.67.1
 
 # Gemini LLM
-google-generativeai==0.8.6
-google-ai-generativelanguage==0.6.15
+google-genai==0.5.0
 google-api-core==2.25.2
 google-auth==2.47.0
 googleapis-common-protos==1.72.0
@@ -30,3 +29,4 @@ pyasn1_modules==0.4.2
 
 # ElevenLabs (TTS)
 elevenlabs==2.29.0
+
